--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -419,6 +419,10 @@
     "message":"EasyList",
     "description":"A filter list"
   },
+  "filtereasylist_lite":{
+    "message":"EasyList Lite",
+    "description":"A filter list"
+  },
   "filterrussian":{
     "message":"Русский и украинский",
     "description":"Language names for a filter list"
@@ -821,6 +825,46 @@
   },
   "lang_turkish":{
     "message":"Турецкий",
+    "description":"Language name"
+  },
+  "lang_catalan":{
+    "message":"Каталонский",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"Китайский упрощенный",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"Китайский традиционный",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"Хорватский",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"Норвежский",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"Сербский",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"Словенский",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"Вьетнамский",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"Португальский (Бразилия)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"Португальский (Португалия)",
     "description":"Language name"
   },
   "filtereasylist_plus_bulgarian":{
@@ -1239,6 +1283,14 @@
     "message":"Поддержка",
     "description":"A tab on the Options page"
   },
+  "tabtranslations":{
+    "message":"Локализации",
+    "description":"A tab on the Options page"
+  },
+  "translators":{
+    "message":"Вы можете узнать больше о том как помочь перевести AdBlock [[here]]",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
+  },
   "report_ad_on_page":{
     "message":"Сообщить о рекламе на этой странице",
     "description":"Entry in the AdBlock button menu"
@@ -1609,6 +1661,10 @@
     "message":"Вы можете снова включить это и поддерживать веб-сайты, которые Вы любите, выбрав «Разрешить некоторую ненавязчивую рекламу» ниже.",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
   },
+  "easylist_lite_or_easylist":{
+    "message":"Мы рекомендуем подписаться либо на \"EasyList Lite\", либо на \"EasyList\", а не на оба.",
+    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
+  },
   "easylist_disable_done":{
     "message":"AdBlock использует EasyList для блокировки рекламы на большинстве сайтов.",
     "description":"Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
@@ -1720,5 +1776,13 @@
   "custom_filters_migration_error_message_part3":{
     "message":"Исходная запись: ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "show_language_options":{
+    "message":"Позвольте мне выбрать язык в AdBlock",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
+  "display_language_selector":{
+    "message":"Отображать AdBlock на",
+    "description":"Text shown before language selector drop-down."
   }
 }
